[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/HUD/Overlay.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD/Background.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Gruppo-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/HUD/Next.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 35
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 75
use_filter = true
font_data = ExtResource( 3 )

[node name="Overlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Control"]
modulate = Color( 0.247059, 0.247059, 0.247059, 0 )
position = Vector2( -1.25159, 0 )
scale = Vector2( 0.589258, 1.56863 )
texture = ExtResource( 2 )
centered = false

[node name="ScoreTitle" type="Label" parent="Control"]
modulate = Color( 0.247059, 0.247059, 0.247059, 0 )
margin_top = 338.643
margin_right = 720.0
margin_bottom = 373.643
custom_fonts/font = SubResource( 2 )
text = "SCORE"
align = 1

[node name="ScoreValue" type="Label" parent="Control"]
modulate = Color( 0.247059, 0.247059, 0.247059, 0 )
margin_top = 378.643
margin_right = 720.0
margin_bottom = 452.643
custom_fonts/font = SubResource( 1 )
text = "250"
align = 1

[node name="TimeTitle" type="Label" parent="Control"]
modulate = Color( 0.247059, 0.247059, 0.247059, 0 )
margin_top = 555.152
margin_right = 720.0
margin_bottom = 590.152
custom_fonts/font = SubResource( 2 )
text = "TIME"
align = 1

[node name="TimeValue" type="Label" parent="Control"]
modulate = Color( 0.247059, 0.247059, 0.247059, 0 )
margin_top = 595.152
margin_right = 720.0
margin_bottom = 669.152
custom_fonts/font = SubResource( 1 )
text = "1:23"
align = 1

[node name="TextureButton" type="TextureButton" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 932.923
margin_right = 720.0
margin_bottom = 995.923
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Control/TextureButton" to="." method="_on_TextureButton_pressed"]
